Attempting to resolve safari layout issues, and some other cleanup

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -33,7 +33,6 @@ body {
     max-width: 720px;
     display: block;
     background: var(--choodle-yellow);
-    padding-bottom: env(safe-area-inset-bottom); /* adjust for safari mobile chrome overlay */
 }
 
 pre {
